# ai-engineering-hub

./: readme.md
langchain/: langchain.md
langchain/practice-1/: .gitignore  README.md  installation_guide.md  pyproject.toml
langchain/practice-1/src/: app.py  main.py
langchain/practice-1/src/api/: routes.py
langchain/practice-1/src/chain/: chain.py
langchain/practice-1/src/chunking_strategy/: character_splitter.py  data_loader.py  recursive_char_text_splitter.py  sample_text.txt
langchain/practice-1/src/config/: settings.py
langchain/practice-1/src/llm/: client.py
langchain/practice-1/src/mcp_service/: mcp_server.py
langchain/practice-1/src/prompts/: prompts.py
