[project]
name = "practice-1"
version = "0.1.0"
description = "LangChain practice with local LLaMA"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=0.2",
    "langchain-community>=0.2",
    "langchain-text-splitters>=1.1.0",
    "mcp-server>=0.1.4",
    "ollama>=0.6.1",
    "uvicorn>=0.40.0",
]
